SpecialAllEvents: Fix alignment, spacing and overflow issues
- Remove unneeded top margin from event name headers added by the skin.
- Let the event meeting type and organizer wrap on smaller screens,
  instead of forcing them to fit on a single line.
- Add comment about not using `gap` when possible.
- Allow long usernames to wrap instead of overflowing the container.
- Tweak the spacing of the day element and make it a bit smaller to
  reduce the chance of such overflows (for the event dates and meeting
  type at least) on smaller screens.

Bug: T363864

--- a/resources/ext.campaignEvents.specialeventslist.styles/EventsListPager.less
+++ b/resources/ext.campaignEvents.specialeventslist.styles/EventsListPager.less
@@ -1,7 +1,14 @@
 @import 'mediawiki.skin.variables.less';
 
-.ext-campaignevents-events-list-pager-details > *:not( :last-child ) {
-	margin-bottom: 0.5em;
+.ext-campaignevents-events-list-pager-details {
+	> *:not( :last-child ) {
+		margin-bottom: 0.5em;
+	}
+
+	&& > h4 {
+		// Remove top margin and padding set by skins (needs high specificity)
+		margin-top: 0;
+	}
 }
 
 .ext-campaignevents-eventslist-pager-icon {
@@ -10,20 +17,27 @@
 
 .ext-campaignevents-eventslist-pager-bottom {
 	display: flex;
+	flex-wrap: wrap;
+	// Add vertical gaps when wrapping. Only works on modern browsers.
+	row-gap: 0.5em;
+	// Prevent overflows with long usernames (T363864)
+	overflow-wrap: anywhere;
 
-	> div {
+	> div:not( :last-child ) {
+		// Alternative for `gap` when on a single row.
+		// Support: IE11, Chrome and Edge < 84, FF < 63, Safari < 14.1, iOS < 14.5 and others
 		padding-right: 10px;
 	}
 }
 
 .ext-campaignevents-events-list-pager-row {
+	margin-left: 25px;
 	display: flex;
 
 	> .ext-campaignevents-events-list-pager-day {
-		padding: 0 20px 20px 0;
 		font-size: 2em;
-		min-width: 3em;
-		text-align: center;
+		flex: 0 0 1.5em;
+		margin-right: 20px;
 	}
 }
 
@@ -31,8 +45,10 @@
 	font-size: 1.2em;
 }
 
-.mw-contributions-list {
+ul.mw-contributions-list.mw-contributions-list {
+	// Remove any left margin or padding set by the skin on ul elements (needs high specificity)
 	margin-left: 0;
+	padding-left: 0;
 }
 
 .ext-campaignevents-events-list-pager-link {
